# Estudo

./: .replit  app.py  google_sheets_auth.py  pyproject.toml  replit.md  requirements.txt
.streamlit/: config.toml
attached_assets/: Pasted-Act-as-a-Senior-Python-Developer-Create-a-Streamlit-app_1766605812776.txt  Pasted-Act-as-a-Senior-Python-Developer-Rebuild-the-entire-Str_1766688397369.txt  Pasted-Act-as-a-Senior-Python-Developer-Refactor-the-existing-_1766772741826.txt  Pasted-Act-as-a-Senior-Python-Streamlit-Developer-Refactor-mai_1766835472080.txt  Pasted-Inject-custom-CSS-into-main-py-to-achieve-a-High-End-Di_1766774118959.txt  Pasted-Refactor-the-existing-Streamlit-app-to-include-advanced_1766661123157.txt  Pasted-Refactor-the-existing-Streamlit-app-to-include-advanced_1766661198983.txt
